# lambda-requests

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  lr.py  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
lambda_requests/: __init__.py  lambda_request.py
tests/: base.py  test_lambda.py  test_lambda_integration.py
