[metadata]
name = lambda_requests
version = 1.5
author = Ilya Sukhanov
author_email = ilya@sukhanov.net
license = MIT license
description = Use Requests to invoke AWS Lambdas
keywords = lambda_requests
url = https://github.com/IlyaSukhanov/lambda-requests
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = lambda_requests
zip_safe = False
install_requires =
    boto3
    lambda-invoke
    requests
include_package_data = True

[options.extras_require]
testing =
    pip
    flake8
    tox
    coverage
    pytest
    pyflakes
    pytest-cov
    bandit
    black
    isort
    wheel
    twine
    build

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length=120


[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_third_party=blrt-lib, safe_sqlalchemy
combine_as_imports=true
